@@ -13,6 +13,10 @@ HISTORY
 
   ++ New features:
 
+  2010-03-28: Simon Goldschmidt
+  * ip_frag.c: create a new (contiguous) PBUF_RAM for every outgoing
+    fragment if LWIP_NETIF_TX_SINGLE_PBUF==1
+
   2010-03-27: Simon Goldschmidt
   * etharp.c: Speedup TX by moving code from find_entry to etharp_output/
     etharp_query to prevent unnecessary function calls (inspired by
